[gd_scene load_steps=2 format=2]

[ext_resource path="res://tests.gd" type="Script" id=1]

[node name="TestScene" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inputs" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Inputs"]
margin_left = 24.0
margin_top = 26.0
margin_right = 294.0
margin_bottom = 572.0
text = "Insert here your vectors and matrices to conduct various tests. Write them as you would write arrays in GDScript, and they will be parsed accordingly. Take care of making them the right size."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Inputs"]
margin_left = 24.0
margin_top = 126.0
margin_right = 280.0
margin_bottom = 156.0
text = "Vector 1 (v1)"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vector1" type="TextEdit" parent="Inputs"]
margin_left = 24.0
margin_top = 156.0
margin_right = 280.0
margin_bottom = 191.0
text = "[1,1,1]"
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Inputs"]
margin_left = 24.0
margin_top = 191.0
margin_right = 280.0
margin_bottom = 221.0
text = "Vector 2 (v2)"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vector2" type="TextEdit" parent="Inputs"]
margin_left = 24.0
margin_top = 224.0
margin_right = 280.0
margin_bottom = 259.0
text = "[1,2,3]"
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Inputs"]
margin_left = 25.0
margin_top = 289.0
margin_right = 281.0
margin_bottom = 319.0
text = "Matrix (M)"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Matrix" type="TextEdit" parent="Inputs"]
margin_left = 25.0
margin_top = 320.0
margin_right = 281.0
margin_bottom = 390.0
text = "[[1,2,3],[2,1,4],[3,4,1]]"
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestVector1" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTestVector1" type="Button" parent="TestVector1"]
margin_left = 337.0
margin_top = 26.0
margin_right = 468.0
margin_bottom = 72.0
text = "Test vector 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TestVector1"]
margin_left = 337.0
margin_top = 93.0
margin_right = 468.0
margin_bottom = 126.0
text = "Norm:"
valign = 1

[node name="Norm" type="Label" parent="TestVector1"]
margin_left = 391.0
margin_top = 93.0
margin_right = 468.0
margin_bottom = 126.0
valign = 1

[node name="TestVector2" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTestVector2" type="Button" parent="TestVector2"]
margin_left = 337.0
margin_top = 156.0
margin_right = 468.0
margin_bottom = 202.0
text = "Test vector 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TestVector2"]
margin_left = 337.0
margin_top = 223.0
margin_right = 468.0
margin_bottom = 256.0
text = "Element-wise (v1+v2):"
valign = 1

[node name="Ewise" type="Label" parent="TestVector2"]
margin_left = 337.0
margin_top = 259.0
margin_right = 473.0
margin_bottom = 289.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TestVector2"]
margin_left = 337.0
margin_top = 319.0
margin_right = 474.0
margin_bottom = 352.0
text = "Dot product (v1.v2):"
valign = 1

[node name="Dot" type="Label" parent="TestVector2"]
margin_left = 337.0
margin_top = 355.0
margin_right = 473.0
margin_bottom = 385.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="TestVector2"]
margin_left = 337.0
margin_top = 417.53
margin_right = 474.0
margin_bottom = 450.53
text = "Dyadic matrix (v2 x v2):"
valign = 1

[node name="Dyadic" type="Label" parent="TestVector2"]
margin_left = 337.0
margin_top = 453.53
margin_right = 473.0
margin_bottom = 483.53
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestMatrix" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTestMatrix" type="Button" parent="TestMatrix"]
margin_left = 541.544
margin_top = 26.0
margin_right = 672.544
margin_bottom = 72.0
text = "Test matrix"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TestMatrix"]
margin_left = 541.544
margin_top = 93.0
margin_right = 672.544
margin_bottom = 126.0
text = "Dot product (M.v1):"
valign = 1

[node name="Dot" type="Label" parent="TestMatrix"]
margin_left = 542.0
margin_top = 126.0
margin_right = 673.0
margin_bottom = 159.0
valign = 1

[node name="Label2" type="Label" parent="TestMatrix"]
margin_left = 542.0
margin_top = 179.0
margin_right = 673.0
margin_bottom = 212.0
text = "Square (M.M):"
valign = 1

[node name="Square" type="Label" parent="TestMatrix"]
margin_left = 542.456
margin_top = 212.0
margin_right = 673.456
margin_bottom = 245.0
text = "
"
valign = 1

[node name="Label3" type="Label" parent="TestMatrix"]
margin_left = 542.456
margin_top = 289.0
margin_right = 673.456
margin_bottom = 322.0
text = "QR decomposition:"
valign = 1

[node name="Q" type="RichTextLabel" parent="TestMatrix"]
margin_left = 543.0
margin_top = 322.0
margin_right = 788.0
margin_bottom = 400.0
text = "
"
fit_content_height = true

[node name="R" type="RichTextLabel" parent="TestMatrix"]
margin_left = 542.0
margin_top = 418.0
margin_right = 788.0
margin_bottom = 503.0
fit_content_height = true

[node name="Label6" type="Label" parent="TestMatrix"]
margin_left = 543.0
margin_top = 503.0
margin_right = 674.0
margin_bottom = 536.0
text = "Reconstructed:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="invQR" type="RichTextLabel" parent="TestMatrix"]
margin_left = 542.0
margin_top = 536.0
margin_right = 788.0
margin_bottom = 591.0
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="TestMatrix"]
margin_left = 788.171
margin_top = 26.0
margin_right = 976.171
margin_bottom = 59.0
text = "Eigenvalues (power iteration):"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EvalsPowIt" type="RichTextLabel" parent="TestMatrix"]
margin_left = 788.0
margin_top = 72.0
margin_right = 1011.0
margin_bottom = 105.0
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="TestMatrix"]
margin_left = 788.171
margin_top = 126.0
margin_right = 982.171
margin_bottom = 159.0
text = "Eigenvectors (power iteration):"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EvecsPowIt" type="RichTextLabel" parent="TestMatrix"]
margin_left = 788.171
margin_top = 179.0
margin_right = 1011.17
margin_bottom = 252.0
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="TestMatrix"]
margin_left = 788.171
margin_top = 289.0
margin_right = 982.171
margin_bottom = 322.0
text = "Eigenvector test (e1.M.e1):"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EtestPowIt" type="Label" parent="TestMatrix"]
margin_left = 788.0
margin_top = 319.0
margin_right = 982.0
margin_bottom = 352.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TestVector1/ButtonTestVector1" to="." method="_on_ButtonTestVector1_pressed"]
[connection signal="pressed" from="TestVector2/ButtonTestVector2" to="." method="_on_ButtonTestVector2_pressed"]
[connection signal="pressed" from="TestMatrix/ButtonTestMatrix" to="." method="_on_ButtonTestMatrix_pressed"]
